--- a/view/dataManage/setKonwledge.html
+++ b/view/dataManage/setKonwledge.html
@@ -23,7 +23,7 @@
 			    overflow-x: auto;"
 			}
 			#prevknowledgeName{
-				background: url(../../../images/_left.png) no-repeat right;
+				background: url(../../images/_left.png) no-repeat right;
 				background-origin: content-box;
 				cursor: pointer;
 			}
@@ -48,9 +48,9 @@
 				</div>
 				<div class="list_btm" style="padding-bottom: 0;">
 					<form class="form-horizontal pad_t_20 pad_l_40" role="form">
-						<div class="form-group none">
-							<label class="col-sm-2"><input id="chapterName1" name="chapterknowledge" class="" type="radio" value="1" checked>下级章节</label>
-							<label class="col-sm-2"><input id="chapterName2" name="chapterknowledge" class="" type="radio" value="2" disabled>分配知识点</label>
+						<div class="form-group">
+							<label class="col-sm-2"><input id="chapterName1" name="chapterknowledge" class="" type="radio" value="1">分配章节</label>
+							<label class="col-sm-2"><input id="chapterName2" name="chapterknowledge" class="" type="radio" value="2">分配知识点</label>
 						</div>
 						<div class="form-group"><label class="col-sm-2">所选知识点	</label></div>
 						<div id="otherNode" class="form-group col_1">
