--- a/view/questionBank/uploading_question.html
+++ b/view/questionBank/uploading_question.html
@@ -205,7 +205,8 @@
 				type: 'get'
 			},
 			view: {
-				dblClickExpand: false
+				dblClickExpand: false,
+				fontCss: setFontCss
 			},
 			data: {
 				simpleData: {
@@ -215,6 +216,9 @@
 			callback: {
 				onClick: onClick1,
 			}
+		};
+		function setFontCss(treeId, treeNode) {
+			return treeNode.type == 2 ? {color:"#068fe2"} : {};
 		};
 		function filter(treeId, parentNode, childNodes) {
 			if (!childNodes) return null;
