--- a/view/userManage/add_teacher.html
+++ b/view/userManage/add_teacher.html
@@ -392,7 +392,7 @@
 							c['grades'] = gradesOfSchoolClazz();
 							vvm.bindclazz.push(c);
 						}
-						console.log("bindclazz: " + JSON.stringify(vvm.bindclazz));
+						console.log(vvm.bindclazz);
 					}, vvm.selectedSchool);
 				}else{
 					//新建
