--- a/view/userManage/parents_list.html
+++ b/view/userManage/parents_list.html
@@ -55,6 +55,7 @@
 			      text-align:center; /*设置水平居中*/
 			      vertical-align:middle;/*设置垂直居中*/
 			}
+			#temptr td{border-top: 1px solid #ddd;}
 		</style>
 	</head>
 
@@ -125,19 +126,21 @@
 			<div class="numshu_btm">
 				<div class="list_btm">
 					<div class="table-responsive">
-						<table class="table table-hover " style="text-align: center;">
-							<tr>
-								<td><strong>序号</strong></td>
-								<td><strong>学校</strong></td>
-								<td><strong>学生姓名</strong></td>
-								<td><strong>年级</strong></td>
-								<td><strong>班级</strong></td>
-								<td><strong>与孩子关系</strong></td>
-								<td><strong>家长姓名</strong></td>									
-								<td><strong>家长手机号</strong></td>
-								<td><strong>用户状态</strong></td>
-								<td><strong>操作</strong></td>
-							</tr>
+						<table class="table table-hover" style="text-align: center;">
+							<thead>
+								<tr id="temptr">
+									<td><strong>序号</strong></td>
+									<td><strong>学校</strong></td>
+									<td><strong>学生姓名</strong></td>
+									<td><strong>年级</strong></td>
+									<td><strong>班级</strong></td>
+									<td><strong>与孩子关系</strong></td>
+									<td><strong>家长姓名</strong></td>									
+									<td><strong>家长手机号</strong></td>
+									<td><strong>用户状态</strong></td>
+									<td><strong>操作</strong></td>
+								</tr>
+							</thead>	
 							<tbody class="addlist">
 															
 							</tbody>
